# RType

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  RType  build.bat  build.sh  clang.sh  clean.sh  conanfile.py  conanfile.txt  tools.sh
bonus/power4/: CMakeLists.txt
bonus/power4/assets/: game.json
bonus/power4/assets/scenes/: game.json  home.json  scenesTest.json
bonus/power4/assets/scripts/: ball.lua  gameManager.lua
client/: CMakeLists.txt
client/src/: main.cpp
engine/: CMakeLists.txt
engine/include/IRuntime/: IRuntime.hpp
engine/include/common/: ICppScript.hpp  KeyCode.hpp
engine/libs/dimension/: CMakeLists.txt
engine/libs/mlg/: CMakeLists.txt
engine/libs/mlg/tests/: test_vec3.cpp
engine/libs/sdl_lib/: CMakeLists.txt
engine/libs/sfml_lib/: CMakeLists.txt
engine/src/: RType.cpp  RType.hpp  RTypeEngine.cpp  RTypeEngine.hpp  addSystems.cpp
engine/src/IRenderSystem/: IRenderSystem.hpp
engine/src/IRuntime/: IRuntime.hpp
engine/src/IRuntime/NullRuntime/: NullRuntime.hpp
engine/src/NetworkEvents/: FireEvent.hpp  GameStartEvent.hpp  HoldFireEvent.hpp  MoveDownEvent.hpp  MoveLeftEvent.hpp  MoveRightEvent.hpp  MoveUpEvent.hpp  NetworkEventHandler.cpp  NetworkEventHandler.hpp  StopMoveDownEvent.hpp  StopMoveLeftEvent.hpp  StopMoveRightEvent.hpp  StopMoveUpEvent.hpp
engine/src/NetworkHandler/: EndpointState.cpp  EndpointState.hpp  NetworkHandler.cpp  NetworkHandler.hpp  NetworkIdHandler.cpp  NetworkIdHandler.hpp  PacketHandler.cpp  PacketHandler.hpp
engine/src/NetworkPacketManager/: APacket.cpp  APacket.hpp  AdiosServerPacket.cpp  ClientEventPacket.cpp  ClientEventPacket.hpp  CreateEntityPacket.cpp  CreateEntityPacket.hpp  DestroyEntityPacket.cpp  DestroyEntityPacket.hpp  HiClientPacket.cpp  HiClientPacket.hpp  HiServerPacket.cpp  HiServerPacket.hpp  MoveEntityPacket.cpp  MoveEntityPacket.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketValidationPacket.cpp  PacketValidationPacket.hpp  PingPacket.cpp  PingPacket.hpp  UpdateEntityPacket.cpp  UpdateEntityPacket.hpp
engine/src/NullRuntime/: NullRuntime.hpp
engine/src/PacketManager/: APacket.cpp  APacket.hpp  AdiosServerPacket.cpp  AdiosServerPacket.hpp  ClientEventPacket.cpp  ClientEventPacket.hpp  CreateEntityPacket.cpp  CreateEntityPacket.hpp  DestroyEntityPacket.cpp  DestroyEntityPacket.hpp  HealthcheckPacket.cpp  HealthcheckPacket.hpp  HiClientPacket.cpp  HiClientPacket.hpp  HiServerPacket.cpp  HiServerPacket.hpp  KickClientPacket.cpp  KickClientPacket.hpp  MoveEntityPacket.cpp  MoveEntityPacket.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketValidationPacket.cpp  PacketValidationPacket.hpp  PingPacket.cpp  UpdateEntityPacket.cpp  UpdateEntityPacket.hpp
engine/src/RenderSystem/: RenderSystem.cpp  RenderSystem.hpp
engine/src/RenderSystemSDL/: RenderSystemSDL.cpp  RenderSystemSDL.hpp
engine/src/RenderSystemSFML/: RenderSystemSFML.cpp  RenderSystemSFML.hpp
engine/src/clocksManager/: ClockManager.cpp  ClockManager.hpp
engine/src/common/: COMPONENTLIST.hpp  ClientEvent.hpp  Event.hpp  FROMJSON.hpp  ICppScript.hpp  IScript.hpp  KeyCode.hpp  PacketType.hpp  SCRIPTLIST.hpp  SYSTEMLIST.hpp  components.hpp  fromJson.hpp  fromJsonNetwork.hpp  scriptsComponent.hpp
engine/src/common/animations/: Animation.cpp  Animation.hpp  AnimationList.cpp  AnimationList.hpp
engine/src/common/components/: adminComponents.hpp  adminFromJson.hpp  components.hpp  fromJson.hpp  scriptsComponent.hpp  uiComponents.hpp  uiFromJson.hpp
engine/src/common/cppScripts/: Ally.hpp  AnimCharge.hpp  AnimLaserCharge.hpp  AnimPlayer.hpp  AnimThruster.hpp  BigHeadRobot.hpp  Bullet.hpp  ComServer.hpp  Credit.hpp  EnemyFactory.hpp  Explosion.hpp  GameManager.hpp  GameState.hpp  GreyShip.hpp  HelloWorld.hpp  Laser.hpp  (+13 more)
engine/src/components/: basicComponents.hpp
engine/src/cppScript/: CppScriptManager.cpp  CppScriptManager.hpp  ICppScript.hpp
engine/src/gameContext/: GameContext.cpp  GameContext.hpp
engine/src/input/: Action.hpp  Axis.hpp  Input.hpp
engine/src/lua/: LuaBindings.hpp  getBasicComponent.cpp  getKey.cpp  luaBindings.hpp  playMusic.cpp
engine/src/networkPacket/: PacketFactory.cpp  PacketFactory.hpp
engine/src/sceneManager/: SceneManager.cpp  SceneManager.hpp  addScriptsToEntity.cpp  createEntity.cpp  initComponentCreators.cpp  initCppScriptCreators.cpp
engine/src/system/: ISystem.hpp  SystemManager.cpp  SystemManager.hpp
engine/src/systems/: forward.hpp
engine/src/utils/: DLLoader.hpp  Event.hpp  GetCppScript.hpp  LoadLibs.cpp  LoadLibs.hpp  Timer.hpp  getBinaryPath.hpp  hexaColorToVec3.cpp  hexaColorToVec3.hpp  random.cpp  random.hpp
engine/tests/: test_basic.cpp
libs/dimension/: CMakeLists.txt
libs/ecs/: CMakeLists.txt
libs/ecs/src/: RTypeECS.cpp  RTypeECS.hpp
libs/ecs/tests/: test_basic.cpp  test_component.cpp  test_componentmanager.cpp  test_entity.cpp
libs/mlg/: CMakeLists.txt
libs/mlg/tests/: test_vec3.cpp
libs/mobs/: CMakeLists.txt
libs/mobs/tests/: test_component.cpp  test_componentmanager.cpp  test_entity.cpp
libs/sdl2/: CMakeLists.txt
libs/sdl2/src/: IRuntime.hpp  RenderSystemSDL.cpp  RenderSystemSDL.hpp
libs/sfml/: CMakeLists.txt
libs/sfml/src/: IRuntime.hpp  KeyCode.hpp  RenderSystemSFML.cpp  RenderSystemSFML.hpp  vec3.hpp
rtypeClient/: CMakeLists.txt
rtypeClient/assets/: game.json
rtypeClient/assets/prefabs/: HelloWorld.json
rtypeClient/assets/scenes/: credits.json  gameOver.json  menu.json  multiplayer.json  scenes1.json  scenes2.json  scenesTest.json  scenesTest2.json  settings.json
rtypeClient/assets/scripts/: player.lua
rtypeClient/src/: main.cpp
rtypeServer/: CMakeLists.txt
rtypeServer/assets/: game.json
rtypeServer/assets/scenes/: menu.json  multiplayer.json  scenes1.json  scenes2.json
rtypeServer/assets/scripts/: player.lua
rtypeServer/src/: main.cpp
rtypeServer/src/server/: ArgParser.cpp  MainServer.cpp  MainServer.hpp
server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
server/src/: Server.hpp
src/: CMakeLists.txt  entity.hpp  main.cpp  mainServer.cpp
src/server/: Server.cpp  Server.hpp
(+232 files in other folders)
